<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin10"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for product name-->
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for price-->
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/product_price" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_product_price"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for quantity-->
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity" />

        <!-- Quantity field -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_quantity"
                style="@style/changeQuantityButton"
                android:text="-" />

            <EditText
                android:id="@+id/edit_book_quantity"
                android:layout_width="@dimen/quantity_width"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin10"
                android:inputType="number" />

            <Button
                android:id="@+id/increase_quantity"
                style="@style/changeQuantityButton"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for supplier name-->
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <!-- Supplier name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label for supplier phone-->
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />

        <!-- Supplier phone field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_from_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:background="@color/colorGreen"
            android:focusable="false"
            android:text="@string/order"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginTop="@dimen/margin20"
            android:background="@color/colorRed"
            android:text="@string/delete_button"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>